refactor: changing text and layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html lang="en" style="background-color: black; color: wheat;">
     <div style="color: white;">
         <title>vapor's repo</title>
+        <h1>things have moved</h1>
         <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dhaliwalg.github.io/">
-            <h1>Cydia Repo</h1>
+            <h2>Cydia Repo</h2>
         </a>
         <a href="https://dhaliwalg.vercel.app/">
-            <h1>Portfolio</h1>
+            <h2>Portfolio</h2>
         </a>
     </div>
 </html>
